--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Glyphosate/Glyphosate_Absolute ED/MIs_Gly_GH_A75_DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Glyphosate/Glyphosate_Absolute ED/MIs_Gly_GH_A75_DR Biomass.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Waterhemp MIs GH Fomesafen Biomass"
+title: "Waterhemp MIs GH Glyphosate Biomass"
 author: "Felipe Faleco"
-date: "09/08/2023"
+date: "11/09/2023"
 output:
   html_document:
     df_print: paged
@@ -24,7 +24,7 @@ library(dplyr)
 
 ```{r}
 
-data <- read.csv("Data Sheet_Fomesafen_GH.csv")
+data <- read.csv("Data Sheet_Glyphosate_GH.csv")
 
 str(data)
 
@@ -36,15 +36,15 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.fome <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A75, herb=="fome"),
+summary.gly <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A75, herb=="gly"),
           FUN=fun)
 
 
-summary.fome_GST <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A75, herb=="fome+GST"),
+summary.gly_GST <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A75, herb=="gly+GST"),
           FUN=fun)
 
 
-summary.fome_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A75, herb=="fome+P450"),
+summary.gly_P450 <- summaryBy(cbind(biomass) ~ herb + rate, data = subset(data_A75, herb=="gly+P450"),
           FUN=fun)
 
 
@@ -91,17 +91,17 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), L
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.W1.3 <- drm(biomass ~ rate, herb, fct = W1.3(), data = data_A75, type = "continuous")
+#model.W1.3 <- drm(biomass ~ rate, herb, fct = W1.3(), data = data_A75, type = "continuous")
 
-plot(fitted(model.W1.3), residuals(model.W1.3))
-
-
-modelFit(model.W1.3)
-
-summary(model.W1.3)
+#plot(fitted(model.W1.3), residuals(model.W1.3))
 
 
-anova(model.W1.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model W1.3
+#modelFit(model.W1.3)
+
+#summary(model.W1.3)
+
+
+#anova(model.W1.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model W1.3
 
 ```
 
@@ -114,14 +114,14 @@ anova(model.W1.3, model.LL4) # p-value > 0.05 means that there is no difference 
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.fome <- ED(model.W1.3, (summary(model.W1.3)$coefficients[4, 1] * 0.5), clevel = "fome", type = "absolute", interval = "delta")
+ED50.gly <- ED(model.LL4, (summary(model.LL4)$coefficients[7, 1] * 0.5), clevel = "gly", type = "absolute", interval = "none")
 
-ED50.fome.P450 <- ED(model.W1.3, (summary(model.W1.3)$coefficients[5, 1] * 0.5), clevel = "fome+P450", type = "absolute", interval = "delta")
+ED50.gly.P450 <- ED(model.LL4, (summary(model.LL4)$coefficients[8, 1] * 0.5), clevel = "gly+P450", type = "absolute", interval = "none")
 
-ED50.fome.GST <- ED(model.W1.3, (summary(model.W1.3)$coefficients[6, 1] * 0.5), clevel = "fome+GST", type = "absolute", interval = "delta")
+ED50.gly.GST <- ED(model.LL4, (summary(model.LL4)$coefficients[9, 1] * 0.5), clevel = "gly+GST", type = "absolute", interval = "none")
 
 
-# In this case, fitting relative and absolute resulted in the same ED50. Perhaps because W1.3 has a lower limit = 0. In simulations using the W1.4, then the relative and absolute ED50 are different. 
+# interval = "none" because it is a symmetric model. For assymetric should use "delta"
 
 ```
 
@@ -133,26 +133,26 @@ ED50.fome.GST <- ED(model.W1.3, (summary(model.W1.3)$coefficients[6, 1] * 0.5), 
 #EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
 
-EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[4, 1] * 0.5),
-                     (summary(model.W1.3)$coefficients[5, 1] * 0.5)), 
-       compMatch = c("fome", "fome+P450"), type = "absolute", interval = "none", reverse = T)
+EDcomp(model.LL4, c((summary(model.LL4)$coefficients[7, 1] * 0.5),
+                     (summary(model.LL4)$coefficients[8, 1] * 0.5)), 
+       compMatch = c("gly", "gly+P450"), type = "absolute", interval = "none", reverse = T)
 
 
-EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[4, 1] * 0.5),
-                     (summary(model.W1.3)$coefficients[6, 1] * 0.5)), 
-       compMatch = c("fome", "fome+GST"), type = "absolute", interval = "none", reverse = T)
+EDcomp(model.LL4, c((summary(model.LL4)$coefficients[7, 1] * 0.5),
+                     (summary(model.LL4)$coefficients[9, 1] * 0.5)), 
+       compMatch = c("gly", "gly+GST"), type = "absolute", interval = "none", reverse = T)
 
 
 # Comparing b parameter (slope)
-compParm(model.W1.3, strVal = "b", operator = "-")
+compParm(model.LL4, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.W1.3, strVal = "d", operator = "-")
+compParm(model.LL4, strVal = "d", operator = "-")
 
 
 # Comparing e parameter (Infletion Point)
-compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
+compParm(model.LL4, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
 
 
 ```
@@ -163,16 +163,16 @@ compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for assymetri
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Fomesafen/Fomesafen_Absolute ED/MIs_Fome_GH_A75_DR Biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/Glyphosate/Glyphosate_Absolute ED/MIs_Gly_GH_A75_DR Biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
 
 
-plot(model.W1.3,
+plot(model.LL4,
      type = "average",
-     xlab = expression(paste("Fomesafen rate (g ai ha"^-1, ")")),
+     xlab = expression(paste("Glyphosate rate (g ae ha"^-1, ")")),
      ylab = expression(paste("A75 Biomass (g plant"^-1, ")")),
      ylim = c(0, 5),
      #broken = T,
@@ -182,17 +182,17 @@ plot(model.W1.3,
      cex.axis = 1.3,
      cex.lab = 1.9,
      cex.legend = 2.0,
-     legendPos = c(4800, 4.0),
+     legendPos = c(12000, 5.0),
      lwd = 1.5)
 
 
 
-points(x = c(ED50.fome[1, 1],
-             ED50.fome.P450[1, 1],
-             ED50.fome.GST[1, 1]),
-       y = c((summary(model.W1.3)$coefficients[4, 1]/2), 
-             (summary(model.W1.3)$coefficients[5, 1]/2),
-             (summary(model.W1.3)$coefficients[6, 1]/2)),
+points(x = c(ED50.gly[1, 1],
+             ED50.gly.P450[1, 1],
+             ED50.gly.GST[1, 1]),
+       y = c((summary(model.LL4)$coefficients[7, 1]/2), 
+             (summary(model.LL4)$coefficients[8, 1]/2),
+             (summary(model.LL4)$coefficients[9, 1]/2)),
        pch = 8,
        cex = 1.3)
 
