--- a/MS Projects/Giant Ragweed Resistance/Analysis for Manuscript/Data Analysis - POST/MAPS.Rmd
+++ b/MS Projects/Giant Ragweed Resistance/Analysis for Manuscript/Data Analysis - POST/MAPS.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "MAPS WATERHEMP POST"
+title: "MAPS GIANT RAGWEED POST"
 author: "Felipe A. Faleco"
 date: "11/7/2020"
 output: pdf_document
@@ -17,17 +17,18 @@ library(kableExtra)
 library(scales)
 library(ggthemes)
 library(usmap)
-library(ggsn)
 library(ggmap)
 library(ggrepel)
 library(maps)
 library(grid)
 library(mapdata)
-library(maptools)
 library(stringr)
 library(dplyr)
 library(choroplethr)
 
+library(ggsn)
+
+install.packages("ggsn")
 
 
 
@@ -52,96 +53,24 @@ base + theme_nothing()
 
 ```{r}
 
-waterhemp <- read.csv("MAPS.csv")
+data <- read.csv("MAPS.csv")
 
 ```
 
 
 
-# POPULATIONS MAIN POOL_RESISTANCE 1X MAP
-
-
-## FILTERING
-
-```{r}
-
-pop_main_pool <- waterhemp %>% filter(tested_ima_gly_atraz == "x")
-
-```
-
-
-
-## NAMES MAP
+## MAP
 
 ```{r}
 
 base + 
-  geom_point(data = pop_main_pool, 
+  geom_point(data = data, 
              mapping = aes(x = long, y = lat, group = pop, label = pop, color = resistance_1x), 
              size = 2.5) +
   geom_polygon(data = county, 
                fill = "NA", 
                color = "gray") +
-  geom_label_repel(data = pop_main_pool, 
-                   aes(label = pop, group = 1, color = resistance_1x),
-                   max.overlaps = 100,
-                   box.padding   = 0.5, 
-                   point.padding = 0.2,
-                   segment.color = 'grey50', 
-                   size = 4,
-                   seed = TRUE,
-                   show.legend = FALSE) +  
-  north(df, location = 'topright', symbol = 1, anchor = c(x = -92.5, y = 47)) +
-  scale_color_manual(name = "Herbicide Resistance 1x Rate POST", 
-                     values = c("darkgreen", "blue", "black", "orange2","cyan4", "darkorchid3", "red", "firebrick" )) +
-  theme_map() +
-  labs(fill="", y = "Latitude", x = "Longitude") + 
-       #title = "Waterhemp Response to POST Herbicides") +
-  theme(axis.text=element_blank(), 
-        axis.title=element_blank(), 
-        panel.background = element_rect(fill="white", color = "black"), 
-        panel.grid.major = element_line(color = "white"), 
-        panel.grid.minor = element_blank(),
-        panel.border = element_rect(fill = NA,color = "white", size = 0.5, linetype = "solid"),
-        legend.title = element_text(size = 18, colour = "black", face = "bold", hjust = 0),
-        legend.text = element_text(size = 15, colour = "black"), 
-        legend.key = element_rect(fill = NA),
-        legend.key.width = unit(0.5, "line"),
-        legend.position = c(0.65, 0.78), 
-        legend.background = element_rect(fill =NA), 
-        plot.title = element_text(color = "darkgreen", face = "bold", size = 30, hjust = 0.5)) +
-  ggsave("MAP_POPMAINPOOL_1X.tiff", units = "in", width = 13, height = 11, dpi = 600, compression = "lzw")
-
-
-```
-
-
-
-# POPULATIONS TESTED WITH ALL HERBS 1X MAP
-
-
-## FILTERING
-
-```{r}
-
-pop_all_herbs <- waterhemp %>% filter(tested_all_herbs == "x")
-
-```
-
-
-
-## NAMES MAP
-
-```{r}
-
-base + 
-  geom_point(data = pop_all_herbs, 
-             mapping = aes(x = long, y = lat, group = pop, label = pop, color = resistance_1x), 
-             size = 2.5) +
-  geom_polygon(data = county, 
-               fill = "NA", 
-               color = "gray") +
-  geom_label_repel(data = pop_all_herbs, 
+  geom_label_repel(data = data, 
                    aes(label = pop, group = 1, , color = resistance_1x),
                    max.overlaps = 100,
                    box.padding   = 0.5, 
@@ -152,10 +81,10 @@ base +
                    show.legend = FALSE) +  
   north(df, location = 'topright', symbol = 1, anchor = c(x = -92.5, y = 47)) +
   scale_color_manual(name = "Herbicide Resistance 1x Rate POST", 
-                     values = c("darkgreen", "blue", "black", "orange2","cyan4", "darkorchid3", "red", "firebrick")) +
+                     values = c("navy", "red", "orange2", "darkgreen")) +
   theme_map() +
   labs(fill="", y = "Latitude", x = "Longitude") + 
-     #title = "Waterhemp Response to POST Herbicides") +
+     #title = "Giant Ragweed Response to POST Herbicides") +
   theme(axis.text=element_blank(), 
         axis.title=element_blank(), 
         panel.background = element_rect(fill="white", color = "black"), 
@@ -163,71 +92,14 @@ base +
         panel.grid.minor = element_blank(),
         panel.border = element_rect(fill = NA,color = "white", size = 0.5, linetype = "solid"),
         legend.title = element_text(size = 18, colour = "black", face = "bold", hjust = 0),
-        legend.text = element_text(size = 15, colour = "black"), 
+        legend.text = element_text(size = 18, colour = "black"), 
         legend.key = element_rect(fill = NA),
         legend.key.width = unit(0.5, "line"),
         legend.position = c(0.65, 0.78), 
         legend.background = element_rect(fill =NA), 
         plot.title = element_text(color = "darkgreen", face = "bold", size = 30, hjust = 0.5)) +
-  ggsave("MAP_POP_ALLHERBS_1X.tiff", units = "in", width = 13, height = 11, dpi = 600, compression = "lzw")
+  ggsave("MAP_POP_ALLHERBS_1X.tiff", units = "in", width = 13, height = 10, dpi = 600, compression = "lzw")
 
 
 ```
 
-
-
-# ALL 88 POPULATIONS COLLECTED
-
-## FILTERING
-
-```{r}
-
-all_pops <- waterhemp
-
-```
-
-
-
-## NAMES MAP
-
-```{r}
-
-base + 
-  geom_point(data = all_pops, 
-             mapping = aes(x = long, y = lat, group = pop, label = pop), 
-             size = 2.5) +
-  geom_polygon(data = county, 
-               fill = "NA", 
-               color = "gray") +
-  geom_label_repel(data = all_pops, 
-                   aes(label = pop, group = 1),
-                   max.overlaps = 100,
-                   box.padding   = 0.5, 
-                   point.padding = 0.2,
-                   segment.color = 'grey50', 
-                   size = 4,
-                   seed = TRUE,
-                   show.legend = FALSE) +  
-  north(df, location = 'topright', symbol = 1, anchor = c(x = -92.5, y = 47)) +
-  #scale_color_manual(name = "Herbicide Resistance 1x Rate POST", 
-                     #values = c("darkgreen", "blue", "black", "orange2","cyan4", "darkorchid3", "red", "firebrick")) +
-  theme_map() +
-  labs(fill="", y = "Latitude", x = "Longitude") + 
-     #title = "Waterhemp Response to POST Herbicides") +
-  theme(axis.text=element_blank(), 
-        axis.title=element_blank(), 
-        panel.background = element_rect(fill="white", color = "black"), 
-        panel.grid.major = element_line(color = "white"), 
-        panel.grid.minor = element_blank(),
-        panel.border = element_rect(fill = NA,color = "white", size = 0.5, linetype = "solid"),
-        legend.title = element_text(size = 18, colour = "black", face = "bold", hjust = 0),
-        legend.text = element_text(size = 15, colour = "black"), 
-        legend.key = element_rect(fill = NA),
-        legend.key.width = unit(0.5, "line"),
-        legend.position = c(0.65, 0.78), 
-        legend.background = element_rect(fill =NA), 
-        plot.title = element_text(color = "darkgreen", face = "bold", size = 30, hjust = 0.5)) +
-  ggsave("MAP_ALL POPS.tiff", units = "in", width = 13, height = 11, dpi = 600, compression = "lzw")
-
-
-```
