--- a/MS Projects/Giant Ragweed Resistance/Analysis for Manuscript/Data Analysis - POST/MAPS.Rmd
+++ b/MS Projects/Giant Ragweed Resistance/Analysis for Manuscript/Data Analysis - POST/MAPS.Rmd
@@ -25,12 +25,11 @@ library(mapdata)
 library(stringr)
 library(dplyr)
 library(choroplethr)
-
-
 library(cartography)
+library(mapsf)
 
+install.packages("mapsf")
 
-install.packages("cartography")
 
 
 
@@ -81,7 +80,6 @@ base +
                    size = 4,
                    seed = TRUE,
                    show.legend = FALSE) +  
-  #north(pos = "topright", col = "grey20", south = FALSE, x = NULL) +
   scale_color_manual(name = "Herbicide Resistance 1x Rate POST", 
                      values = c("blue", "red", "orange2", "darkorchid3", "darkgreen")) +
   theme_map() +
@@ -89,19 +87,20 @@ base +
      #title = "Giant Ragweed Response to POST Herbicides") +
   theme(axis.text=element_blank(), 
         axis.title=element_blank(), 
-        panel.background = element_rect(fill="white", color = "black"), 
+        panel.background = element_rect(fill="white"), 
         panel.grid.major = element_line(color = "white"), 
         panel.grid.minor = element_blank(),
-        panel.border = element_rect(fill = NA,color = "white", size = 0.5, linetype = "solid"),
-        legend.title = element_text(size = 18, colour = "black", face = "bold", hjust = 0),
-        legend.text = element_text(size = 18, colour = "black"), 
+        panel.border = element_rect(fill = "NA",color = "white", size = 0.5, linetype = "solid"),
+        legend.title = element_text(size = 14, colour = "black", face = "bold", hjust = 0),
+        legend.text = element_text(size = 14, colour = "black"), 
         legend.key = element_rect(fill = NA),
         legend.key.width = unit(0.5, "line"),
         legend.position = c(0.65, 0.78), 
         legend.background = element_rect(fill =NA), 
         plot.title = element_text(color = "darkgreen", face = "bold", size = 30, hjust = 0.5)) +
-  ggsave("MAP_POP_ALLHERBS_1X.tiff", units = "in", width = 13, height = 10, dpi = 600, compression = "lzw")
+  ggsave("MAP_POP_ALLHERBS_1X.tiff", units = "in", width = 13, height = 11, dpi = 600, compression = "lzw")
 
+  ele
 
 ```
 
