--- a/MS Projects/Giant Ragweed Resistance/Analysis for Manuscript/Data Analysis - POST/LOGIT_BIORED.Rmd
+++ b/MS Projects/Giant Ragweed Resistance/Analysis for Manuscript/Data Analysis - POST/LOGIT_BIORED.Rmd
@@ -94,8 +94,8 @@ CLD_emm_herb_rate
 
 plot(emm_herb_rate, adjust = "tukey", comparisons = F, alpha = 0.05) + 
   geom_point(size = 2) +
-  geom_text(aes(label = c("b", "b", "b", "a", "a", "c", "d", "a",
-                          "a", "a", "a", "a", "a", "b", "c", "a")),
+  geom_text(aes(label = c("b", "a", "b", 
+                          "c", "a", "b")),
             vjust = -0.8, size = 4) +
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
