--- a/PhD/Exacto/2023/2023-112/A92/2023-112_A92_DR Biomass.Rmd
+++ b/PhD/Exacto/2023/2023-112/A92/2023-112_A92_DR Biomass.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exacto 2023-112 DR Control 7 DAT"
+title: "Exacto 2023-112 A90 DR Biomass"
 author: "Felipe Faleco"
 date: "11/27/2023"
 output:
@@ -24,7 +24,7 @@ library(dplyr)
 
 ```{r}
 
-data <- read.csv("Data Sheet_2023-112_copy.csv")
+data <- read.csv("Data Sheet_2023-112_A90.csv")
 
 str(data)
 
@@ -50,7 +50,7 @@ summary.EXT1490 <- summaryBy(cbind(ve_7dat, ve_14dat, ve_21dat,biomass, surv) ~ 
 
 ```{r}
 
-model.LL4<- drm(ve_7dat ~ rate, curve, fct = LL.4(),  data = data, type = "continuous")
+model.LL4 <- drm(biomass ~ rate, herb, fct = LL.4(),  data = data, type = "continuous")
 
 
 plot(fitted(model.LL4), residuals(model.LL4))
@@ -84,20 +84,20 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), L
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.LL2.3 <- drm(ve_7dat ~ rate, curve, fct = LL2.3(), data = data, type = "continuous")
+model.L.3 <- drm(biomass ~ rate, herb, fct = L.3(), data = data, type = "continuous")
 
 
-plot(fitted(model.LL2.3), residuals(model.LL2.3))
+plot(fitted(model.L.3), residuals(model.L.3))
 
-qqnorm(residuals(model.LL2.3))
-
-
-modelFit(model.LL2.3)
-
-summary(model.LL2.3)
+qqnorm(residuals(model.L.3))
 
 
-anova(model.LL2.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+modelFit(model.L.3)
+
+summary(model.L.3)
+
+
+anova(model.L.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -107,13 +107,10 @@ anova(model.LL2.3, model.LL4) # p-value > 0.05 means that there is no difference
 
 ```{r}
 
-#ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
+ED50.reflex <- ED(model.L.3, (summary(model.L.3)$coefficients[3, 1] * 0.5), clevel = "reflex", type = "absolute", interval = "delta")
 
-ED50.A90.reflex <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[5, 1] * 0.5), clevel = "A90|reflex", type = "absolute", interval = "delta", logBase = exp(1))
-
-ED50.A90.EXT1490 <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[6, 1] * 0.5), clevel = "A90|EXT1490", type = "absolute", interval = "delta")
-
+ED50.EXT1490 <- ED(model.L.3, (summary(model.L.3)$coefficients[4, 1] * 0.5), clevel = "EXT1490", type = "absolute", interval = "delta")
 
 
 # If the model was a Log-logistic (log(ED50) as parameter) E.g.: LL2.3,  we should use logBase = exp(1).
@@ -125,49 +122,23 @@ ED50.A90.EXT1490 <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[6, 1] * 0
 
 ```{r}
 
-EDcomp(model.LL3, c(50, 50), type = "relative", interval = "none", reverse = TRUE)
+EDcomp(model.L.3, c((summary(model.L.3)$coefficients[4, 1] * 0.5),
+                     (summary(model.L.3)$coefficients[3, 1] * 0.5)), 
+       compMatch = c("reflex", "EXT1490"), type = "absolute", interval = "none", reverse = F)
 
-EDcomp(model.LL3, c(90, 90), type = "relative", interval = "none", reverse = TRUE)
 
 
 # Comparing b parameter (slope)
-compParm(model.LL3, strVal = "b", operator = "-")
+compParm(model.L.3, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.LL3, strVal = "d", operator = "-")
-
-# Comparing e parameter (ED50)
-compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference, and not the ratio like in the EDcomp
+compParm(model.L.3, strVal = "d", operator = "-")
 
 
-```
+# Comparing e parameter (Infletion Point)
+compParm(model.L.3, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
 
-
-
-# PLOT
-
-```{r}
-
-par(mar = c(5,5,1,1))
-
-plot(model.LL3,
-     type = "average",
-     xlab = expression(paste("Fomesafen dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Control 7 DAT (%)")),
-     col = c("red", "darkgreen"),
-     pch = c(19, 17),
-     cex = 1.2,
-     cex.axis = 1,
-     cex.lab = 1.5,
-     #cex.legend = 1.4,
-     #legendPos = c(1450, 85),
-     lwd = 1)
-
-abline(v = 280, 
-       lwd = 2, 
-       lty = "twodash",
-       col = "black")
 
 ```
 
@@ -177,46 +148,70 @@ abline(v = 280,
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2022-108/DR_vr7DAT.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2023/2023-112/A90/2023-112_A90_DR Biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
+
 
 par(mar = c(5,5,1,1))
 
-plot(model.LL3,
+
+plot(model.L.3,
      type = "average",
-     xlab = expression(paste("Fomesafen dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Control 7 DAT (%)")),
-     col = c("red", "darkgreen"),
+     xlab = expression(paste("Fomesafen rate (g ai ha"^-1, ")")),
+     ylab = expression(paste("Biomass (g plant"^-1, ")")),
+     ylim = c(0, 4),
+     #broken = T,
+     col = c("darkgreen", "red"),
      pch = c(19, 17),
      cex = 1.2,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.4,
-     legendPos = c(1450, 85),
-     lwd = 1)
+     legendPos = c(550, 4.0),
+     lwd = 1.5)
 
-abline(v = 280, 
-       lwd = 2, 
-       lty = "twodash",
-       col = "black")
 
-text(x = 650, y = 60, 
-     labels = expression(paste("ED"[50] ~ "Ratio = 1.2 ("%+-% "0.2)")),
-     cex = 1,
-     col = "black",
-     font = 2)
 
-text(x = 480, y = 55, 
-     labels = expression("p-value > 0.1"),
-     cex = 1,
-     col = "black",
-     font = 2)
+#abline(v = 1065, 
+       #lwd = 2, 
+       #lty = "twodash",
+       #col = "black")
 
-text(x = 650, y = 0.5, 
-     labels = expression("1x rate: 280 g ai ha" ^-1),
-     cex = 1.1,
-     col = "black",
-     font = 2)
+
+#text(x = 4500, y = 2.0, 
+     #labels = expression(paste("ED"[50] ~ "A101 = 297.6 ("%+-% "61.7)" ^A)),
+     #cex = 1.0,
+     #col = "black",
+     #font = 2)
+
+
+#text(x = 4200, y = 1.8, 
+     #labels = expression(paste("ED"[50] ~ "A75 = 111.6 ("%+-% "25.8)" ^B)),
+     #cex = 1.0,
+     #col = "black",
+     #font = 2)
+
+
+#text(x = 4200, y = 1.6, 
+     #labels = expression(paste("ED"[50] ~ "A82 = 104.7 ("%+-% "21.5)" ^B)),
+     #cex = 1.0,
+     #col = "black",
+     #font = 2)
+
+
+#text(x = 4200, y = 1.4, 
+     #labels = expression(paste("ED"[50] ~ "A103 = 55.2 ("%+-% "12.3)" ^C)),
+     #cex = 1.0,
+     #col = "black",
+     #font = 2)
+
+
+#text(x = 3200, y = 0.7, 
+     #labels = expression("1x rate: 1065 g ae ha" ^-1),
+     #cex = 1.0,
+     #col = "black",
+     #font = 2)
+
 
 dev.off()
 
