--- a/PhD/Exacto/2023/2023-112/A92/2023-112_A92_ANOVA Biomass.Rmd
+++ b/PhD/Exacto/2023/2023-112/A92/2023-112_A92_ANOVA Biomass.Rmd
@@ -54,7 +54,7 @@ str(data)
 
 ```{r}
 
-model <- glmmTMB(biored ~ rate, data = data, family = beta_family())
+model <- glmmTMB(biored ~ herb * rate, data = data, family = beta_family())
 
 
 ```
@@ -89,14 +89,27 @@ glmmTMB:::Anova.glmmTMB(model)
 
 ```{r, echo=TRUE}
 
-emm_trt <- emmeans(model, ~ trt, adjust = "tukey", type = "response", contr = "pairwise")
+emm_rate <- emmeans(model, ~ rate, adjust = "tukey", type = "response", contr = "pairwise")
 
-emm_trt
+emm_rate
 
-CLD_emm_trt <- if(requireNamespace("multcomp")) {
-    multcomp::cld(emm_trt$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
 
-CLD_emm_trt
+CLD_emm_rate <- if(requireNamespace("multcomp")) {
+    multcomp::cld(emm_rate$emmeans, alpha = 0.1, Letters=letters, adjust="tukey", reversed = TRUE)}
+
+CLD_emm_rate
+
+
+
+emm_herb <- emmeans(model, ~ herb, adjust = "tukey", type = "response", contr = "pairwise")
+
+emm_herb
+
+CLD_emm_herb <- if(requireNamespace("multcomp")) {
+    multcomp::cld(emm_herb$emmeans, alpha = 0.1, Letters=letters, adjust="tukey", reversed = TRUE)}
+
+CLD_emm_herb
+
 
 ```
 
@@ -106,20 +119,45 @@ CLD_emm_trt
 
 ```{r, echo=TRUE}
 
-plot(emm_trt, adjust = "tukey", comparisons = F, alpha = 0.05,  horizontal = T) + 
+plot(emm_rate, adjust = "tukey", comparisons = T, CIs = F, alpha = 0.1,  horizontal = T) + 
   geom_point(size = 2) +
-  geom_text(aes(label = c("a", "a", "a", "a", "a", "a", "a", "a", "a", "a")),
+  geom_text(aes(label = c("b", "ab", "a")),
             vjust = -0.8, size = 4) +
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(#title = "Waterhemp Biomass Reduction - POST", 
-       x = "Control 28 DAT (%)", 
-       y = "Treatment") +
+       x = "Biomass Reduction (%)", 
+       y = "Herbicide Rate") +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 18, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 18, colour = "darkgreen"), 
-         axis.text= element_text(face = "bold", size = 14, colour = "black"))
+         axis.text= element_text(face = "bold", size = 14, colour = "black")) +
+  ggsave("2023-112_A92_ANOVA Biomass_RATE.tiff", units="in", width = 8, height = 6, dpi = 600, compression = "lzw")
 
-  ggsave("2022_115_VR_28DAT.tiff", units="in", width = 10, height = 8, dpi = 600, compression = "lzw")
+
+
+
+
+plot(emm_herb, adjust = "tukey", comparisons = T, CIs = F, alpha = 0.1,  horizontal = T) + 
+  geom_point(size = 2) +
+  geom_text(aes(label = c("a", "b")),
+            vjust = -0.8, size = 4) +
+  scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
+    labels = scales::percent_format(scale = 100, suffix = "")) +
+  labs(#title = "Waterhemp Biomass Reduction - POST", 
+       x = "Biomass Reduction (%)", 
+       y = "Herbicide") +
+  theme_bw() + 
+  theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 18, colour = "darkgreen"), 
+         axis.title = element_text(face = "bold", size = 18, colour = "darkgreen"), 
+         axis.text= element_text(face = "bold", size = 14, colour = "black")) +
+  ggsave("2023-112_A92_ANOVA Biomass_HERB.tiff", units="in", width = 8, height = 6, dpi = 600, compression = "lzw")
+
+
 
 ```
+
+
+
+
+
