--- a/PhD/Exacto/2023/2023-113/2023-113_ANOVA Countred.Rmd
+++ b/PhD/Exacto/2023/2023-113/2023-113_ANOVA Countred.Rmd
@@ -54,9 +54,6 @@ str(data)
 
 model <- glmmTMB(countred ~ herb * rate, data = data, family = beta_family())
 
-model2 <- glmmTMB(logit(countred) ~ herb * rate, data = data, family = "gaussian")
-
-
 ```
 
 
@@ -67,19 +64,11 @@ model2 <- glmmTMB(logit(countred) ~ herb * rate, data = data, family = "gaussian
 
 summary(model)
 
-summary(model2)
-
-
 
 resid <- simulateResiduals(model)
 
-resid2 <- simulateResiduals(model2)
-
-
 
 plot(resid)
-
-plot(resid2)
 
 ```
 
@@ -90,9 +79,6 @@ plot(resid2)
 ```{r, echo=TRUE}
 
 glmmTMB:::Anova.glmmTMB(model)
-
-
-glmmTMB:::Anova.glmmTMB(model2)
 
 ```
 
@@ -108,23 +94,9 @@ emm_rate
 
 
 CLD_emm_rate <- if(requireNamespace("multcomp")) {
-    multcomp::cld(emm_rate$emmeans, alpha = 0.1, Letters=letters, adjust="tukey", reversed = TRUE)}
+    multcomp::cld(emm_rate$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
 
 CLD_emm_rate
-
-
-
-
-emm_rate2 <- emmeans(model2, ~ rate, adjust = "tukey", type = "response", contr = "pairwise")
-
-emm_rate2
-
-
-CLD_emm_rate2 <- if(requireNamespace("multcomp")) {
-    multcomp::cld(emm_rate2$emmeans, alpha = 0.1, Letters=letters, adjust="tukey", reversed = TRUE)}
-
-CLD_emm_rate2
-
 
 
 ```
@@ -136,23 +108,22 @@ CLD_emm_rate2
 ```{r, echo=TRUE}
 
 
-plot(emm_herb_rate, adjust = "tukey", comparisons = T, CIs = F, alpha = 0.1,  horizontal = T) + 
+plot(emm_rate, adjust = "tukey", comparisons = T, CIs = F, alpha = 0.05,  horizontal = T) + 
   geom_point(size = 2) +
-  geom_text(aes(label = c("abc", "c", "abc", "ab", "a", "bc",
-                          "a", "a", "a", "a", "a", "a")),
+  geom_text(aes(label = c("b", "a")),
             vjust = -0.8, size = 4) +
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(#title = "Waterhemp Biomass Reduction - POST", 
-       x = "Biomass Reduction (%)", 
+       x = "Counts Reduction (%)", 
        y = "Herbicide Rate") +
-  facet_grid(~ rate, labeller = label_both) +
+  #facet_grid(~ rate, labeller = label_both) +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 18, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 18, colour = "darkgreen"), 
-         axis.text= element_text(face = "bold", size = 14, colour = "black"),
-         strip.text = element_text(face = "bold", size = 13, colour = "black")) +
-  ggsave("2023-113_ANOVA Biored_HERBxRATE.tiff", units="in", width = 8, height = 6, dpi = 600, compression = "lzw")
+         axis.text= element_text(face = "bold", size = 14, colour = "black")) +
+         #strip.text = element_text(face = "bold", size = 13, colour = "black")) +
+  ggsave("2023-113_ANOVA Countred_RATE.tiff", units="in", width = 8, height = 6, dpi = 600, compression = "lzw")
 
 
 ```
