--- a/PhD/Exacto/2023/2023-113/2023-113_ANOVA Control 28DAT.Rmd
+++ b/PhD/Exacto/2023/2023-113/2023-113_ANOVA Control 28DAT.Rmd
@@ -15,6 +15,8 @@ library(glmmTMB)
 library(DHARMa)
 library(emmeans)
 library(ggplot2)
+library(multcomp)
+library(multcompView)
 
 
 ```
@@ -52,7 +54,7 @@ str(data)
 
 ```{r}
 
-model <- glmmTMB((ve_28dat/100) ~ herb * rate, data = data, family = beta_family())
+model <- glmmTMB(ve_28dat ~ herb * rate, data = data, family = beta_family())
 
 ```
 
@@ -93,10 +95,10 @@ emm_herb_rate <- emmeans(model, ~ herb|rate, adjust = "tukey", type = "response"
 emm_herb_rate
 
 
-CLD_emm_rate <- if(requireNamespace("multcomp")) {
-    multcomp::cld(emm_rate$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
+CLD_emm_herb_rate <- if(requireNamespace("multcomp")) {
+    multcomp::cld(emm_herb_rate$emmeans, alpha = 0.05, Letters=letters, adjust="tukey", reversed = TRUE)}
 
-CLD_emm_rate
+CLD_emm_herb_rate
 
 
 ```
@@ -108,22 +110,23 @@ CLD_emm_rate
 ```{r, echo=TRUE}
 
 
-plot(emm_rate, adjust = "tukey", comparisons = T, CIs = F, alpha = 0.05,  horizontal = T) + 
+plot(emm_herb_rate, adjust = "tukey", comparisons = T, CIs = F, alpha = 0.05,  horizontal = T) + 
   geom_point(size = 2) +
-  geom_text(aes(label = c("b", "a")),
+  geom_text(aes(label = c("ab", "b", "ab", "ab", "a", "ab",
+                          "a", "a", "a", "a", "a", "a")),
             vjust = -0.8, size = 4) +
   scale_x_continuous(breaks = c(0, 0.25, 0.50, 0.75, 1), limits = c(0, 1),
     labels = scales::percent_format(scale = 100, suffix = "")) +
   labs(#title = "Waterhemp Biomass Reduction - POST", 
-       x = "Counts Reduction (%)", 
-       y = "Herbicide Rate") +
-  #facet_grid(~ rate, labeller = label_both) +
+       x = "Control (%)", 
+       y = "Herbicide") +
+  facet_grid(~ rate, labeller = label_both) +
   theme_bw() + 
   theme (plot.title = element_text(face = "bold", hjust = 0.5, size = 18, colour = "darkgreen"), 
          axis.title = element_text(face = "bold", size = 18, colour = "darkgreen"), 
-         axis.text= element_text(face = "bold", size = 14, colour = "black")) +
-         #strip.text = element_text(face = "bold", size = 13, colour = "black")) +
-  ggsave("2023-113_ANOVA Countred_RATE.tiff", units="in", width = 8, height = 6, dpi = 600, compression = "lzw")
+         axis.text= element_text(face = "bold", size = 14, colour = "black"),
+         strip.text = element_text(face = "bold", size = 13, colour = "black")) +
+  ggsave("2023-113_ANOVA Control 28DAT_HERBxRATE.tiff", units="in", width = 8, height = 6, dpi = 600, compression = "lzw")
 
 
 ```
