--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/2023/Mesotrione_Absolute ED/MIs_Mesotrione Only_GC_A101_ DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/2023/Mesotrione_Absolute ED/MIs_Mesotrione Only_GC_A101_ DR Biomass.Rmd
@@ -112,12 +112,12 @@ anova(model.LL2.3, model.LL4) # p-value > 0.05 means that there is no difference
 #ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
-ED50.elevated <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[3, 1] * 0.5), clevel = "elevated", type = "absolute", interval = "delta")
+ED50.elevated <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[3, 1] * 0.5), clevel = "elevated", type = "absolute", interval = "delta", logBase = exp(1))
 
-ED50.ambient <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[4, 1] * 0.5), clevel = "ambient", type = "absolute", interval = "delta")
+ED50.ambient <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[4, 1] * 0.5), clevel = "ambient", type = "absolute", interval = "delta", logBase = exp(1))
 
 
-# In this case, fitting relative and absolute resulted in the same ED50. Perhaps because W1.3 has a lower limit = 0. In simulations using the W1.4, then the relative and absolute ED50 are different. 
+# If the model was a Log-logistic (log(ED50) as parameter) E.g.: LL2.3,  we should use logBase = exp(1). Eg: ED50.A82 <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[5, 1] * 0.5), clevel = "A82", type = "absolute", interval = "delta", logBase = exp(1))
 
 ```
 
@@ -131,7 +131,7 @@ ED50.ambient <- ED(model.LL2.3, (summary(model.LL2.3)$coefficients[4, 1] * 0.5),
 
 EDcomp(model.LL2.3, c((summary(model.LL2.3)$coefficients[4, 1] * 0.5),
                      (summary(model.LL2.3)$coefficients[3, 1] * 0.5)), 
-       compMatch = c("elevated", "ambient"), type = "absolute", interval = "none", reverse = T)
+       compMatch = c("elevated", "ambient"), type = "absolute", interval = "none", logBase = exp(1), reverse = T)
 
 
 # Comparing b parameter (slope)
@@ -163,7 +163,7 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL2.3,
      type = "average",
-     xlab = expression(paste("Mesotrione rate (g ae ha"^-1, ")")),
+     xlab = expression(paste("Mesotrione rate (g ai ha"^-1, ")")),
      ylab = expression(paste("A101 biomass (g plant"^-1, ")")),
      ylim = c(0, 4),
      col = c("red", "darkgreen"),
@@ -172,7 +172,7 @@ plot(model.LL2.3,
      cex.axis = 1.3,
      cex.lab = 1.9,
      cex.legend = 2.0,
-     legendPos = c(4000, 4.0),
+     legendPos = c(500, 4.0),
      lwd = 1.5)
 
 
